k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: polymer2parquet
  labels:
    app: polymer2parquet
